# QuestByCycle

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  config.toml.example  eslint.config.js  gunicorn.conf.py  gunicorn.conf.py.example  manifest.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  robots.txt  rq_worker.py  vite.config.js  wsgi.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
app/: __init__.py  activitypub_utils.py  admin.py  ai.py  auth.py  badges.py  config.py  constants.py  decorators.py  docs.py  forms.py  games.py  google_calendar.py  main.py  models.py  notifications.py  paypal.py  profile.py  push.py  quests.py  scheduler.py  schemas.py  social.py  tasks.py  utils.py  webfinger.py
app/models/: __init__.py  badge.py  federation.py  game.py  notification.py  quest.py  user.py
app/static/: manifest.json  offline.html  sw.js
app/static/.well-known/: assetlinks.json.example
app/static/css/: main.css  main1.css
app/static/js/: add_quest.js  all_submissions_modal.js  badge_management.js  badge_modal.js  create_game.js  delete_game_modal.js  edit_sponsors.js  flash_modal.js  forgot_password_modal.js  game_info_modal.js  generated_quest.js  index_management.js  join_custom_game_modal.js  layout.js  leaderboard_modal.js  loading_modal.js  login_modal.js  manage_quests.js  manage_sponsors.js  modal_common.js  notifications.js  push.js  quest_detail_modal.js  quill_common.js  register_modal.js  reset_password_modal.js  shepherd_tour.js  shout_board_modal.js  submission_detail_modal.js  submit_photo.js  update_game.js  user_management.js  user_profile_modal.js  utils.js
app/static/scss/: main.scss
app/templates/: accept_terms.html  add_quest.html  admin_dashboard.html  create_game.html  edit_sponsors.html  edit_user.html  generated_quest.html  index.html  layout.html  manage_badges.html  manage_quests.html  manage_sponsors.html  mastodon_login.html  reset_password_email.html  submit_photo.html  submit_quest.html  update_game.html  update_password.html  user_management.html
app/templates/modals/: all_submissions_modal.html  badge_modal.html  contact_modal.html  delete_game_modal.html  forgot_password_modal.html  game_info_modal.html  generate_AI_quest_modal.html  join_custom_game_modal.html  leaderboard_modal.html  license_modal.html  loading_modal.html  login_modal.html  (+11 more)
app/utils/: __init__.py  calendar_utils.py  email_utils.py  encryption.py  file_uploads.py  quest_scoring.py  rate_limit.py
docs/: ADMIN.md  AGENTS.md  API.md  COMMANDS.md  DEVELOPER.md  FACEBOOK.md  GOOGLE.md  INFRASTRUCTURE.md  NEWGAME.md  PITCH.md  PUSH_NOTIFICATIONS.md  PWA.md  USER.md  default.NGINX  openapi.yaml
frontend/: AGENTS.md  layout.js  logger.js  main.js  submit_photo_entry.js  sw.js  utils.js
frontend/modules/: add_quest.js  all_submissions_modal.js  badge_management.js  badge_modal.js  create_game.js  delete_game_modal.js  edit_sponsors.js  flash_modal.js  forgot_password_modal.js  game_info_modal.js  generated_quest.js  index_management.js  join_custom_game_modal.js  leaderboard_modal.js  loading_modal.js  login_modal.js  manage_quests.js  manage_sponsors.js  modal_common.js  notifications.js  push.js  quest_detail_modal.js  quill_common.js  register_modal.js  reset_password_modal.js  shout_board_modal.js  submission_detail_modal.js  submit_photo.js  user_management.js  user_profile_modal.js
infra/ansible/: ansible.cfg  inventory.yml  requirements.yml  site.yml
infra/terraform/: main.tf
scripts/: dev.sh  inject_sw_version.cjs  remove_heic_submissions.py
tests/: AGENTS.md  activity.json  conftest.py  dumpPrivKey.py  getgmailtokens.py  helpers.py  sign_and_post.py  test_activitypub_auto_delete.py  test_activitypub_delivery.py  test_admin_dashboard_visibility.py  test_admin_robots_meta.py  test_admin_separation.py  test_admin_upgrade.py  test_admin_user_management.py  test_ai_create_quest.py  test_album_code_access.py  test_album_route.py  test_auth.py  test_auth_extra.py  test_badge_logic.py  test_calendar_sync.py  test_config.py  test_demo_game_generation.py  test_docs_route.py  test_game_admin_selection.py  test_game_key_encryption.py  test_game_quests_api.py  test_google_oauth.py  test_import_quests_csv.py  test_index_badges.py  test_join_custom_game_modal.py  test_json_csrf.py  test_leaderboard_badges.py  test_liaison_email.py  test_logout.py  test_manage_badges.py  test_manage_quests_logic.py  test_manifest.py  test_notifications_auto_delete.py  test_paypal.py  (+21 more)
typings/flask_humanify/: __init__.pyi
typings/flask_limiter/: __init__.pyi  util.pyi
typings/flask_login/: __init__.pyi
typings/flask_wtf/: __init__.pyi  csrf.pyi
(+58 files in other folders)
