[tool.poetry]
name         = "questbycycle"
version      = "0.1.1"
description  = "QuestByCycle is a Flask-based web application designed to engage and motivate the bicycling community through a gamified approach."
authors      = ["Jaron Rosenau <jaron@rosenau.info>"]
package-mode = false

[tool.poetry.dependencies]
python                = "^3.11"

# ───── Flask core & extensions ─────────────────────────────────────────
flask                 = "3.1.1"
werkzeug              = "3.1.3"
flask-assets          = "2.1.0"
flask-wtf             = "1.2.2"
flask-sqlalchemy      = "3.1.1"
flask-login           = "0.6.3"
flask-socketio        = "5.5.1"

# ───── Data layer ──────────────────────────────────────────────────────
sqlalchemy            = "2.0.41"
psycopg2-binary       = "2.9.10"

# ───── Forms, validation, security ─────────────────────────────────────
wtforms               = "3.2.1"
email-validator       = "2.2.0"
cryptography          = "45.0.2"
pyjwt                 = "2.10.1"
bleach                = "6.2.0"

# ───── Infrastructure & runtime ───────────────────────────────────────
gunicorn              = "23.0.0"
gevent                = "25.5.1"
apscheduler           = "3.11.0"

# ───── Utility libraries ───────────────────────────────────────────────
qrcode                = {version = "8.2", extras = ["pil"]}
tweepy                = "4.15.0"
openai                = "1.82.0"
httpx                 = "0.28.1"
httpcore              = "1.0.9"
pytz                  = "2025.2"
toml                  = "0.10.2"

# ───── Development & testing ───────────────────────────────────────────
pytest                = "^8.3.5"

[tool.poetry.group.dev.dependencies]
libsass               = "^0.23.0"
watchdog              = "^6.0.0"

[build-system]
requires      = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
