[tool.poetry]
name         = "questbycycle"
version      = "0.2.1"
description  = "QuestByCycle is a Flask-based web application designed to engage and motivate the bicycling community through a gamified approach."
authors      = ["Jaron Rosenau <jaron@rosenau.info>"]
package-mode = false

[tool.poetry.dependencies]
python                = "^3.11"

flask                 = "3.1.1"
werkzeug              = "3.1.4"
flask-wtf             = "1.2.2"
flask-sqlalchemy      = "3.1.1"
flask-login           = "0.6.3"
flask-limiter         = "^3.8.0"
sqlalchemy            = "2.0.41"
psycopg = {version = "3.2.9", extras = ["binary"]}
wtforms               = "3.2.1"
email-validator       = "2.2.0"
cryptography          = "45.0.2"
pyjwt                 = "2.10.1"
gunicorn              = "23.0.0"
apscheduler           = "3.11.0"
qrcode                = {version = "8.2", extras = ["pil"]}
openai                = "1.82.0"
pywebpush             = "^1.14.0"
pytest                = "^8.3.5"
python-dotenv         = "^1.1.0"
rsa                   = "^4.9.1"
html-sanitizer        = "2.5.0"
requests-oauthlib     = "2.0.0"
redis                = "^5.0.4"
rq                   = "^2.3.3"
psycopg2-binary = "^2.9.10"
google-cloud-storage = "^2.16.0"
google-api-python-client = "^2.126.0"
flask-humanify = "^0.2.3"
pydantic = "^2.10.0"

[tool.poetry.scripts]
rqworker = "rq_worker:main"

[build-system]
requires      = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
